<resources>
    <string name="app_name">iCG Teacher</string>
    <string name="welcome_title">Hello, welcome to \niCampus Guardian\n </string>
    <string name="welcome_user_term">End User License Agreement (EULA)</string>
    <string name="welcome_read_eula">Please read the EULA and click on accept to proceed to the app</string>
    <string name="welcome_user_term_content">"END USER LICENSE AGREEMENT – CORPORATE SOLUTIONS V.01 Please read the following license agreement carefully before using this program. By accepting the agreement, you are agreeing to become the licensee and expressing your complete acceptance of all the terms and conditions of this license agreement. If you do not accept the terms of the agreement, do not install the program. Similarly, use of the program implies your acceptance to be bound by the terms and conditions of this license agreement. This license agreement represents the entire agreement. This license agreement supersedes any prior license agreements licensee with respect to this product or the product it replaces. Similarly, and where permissible under applicable legislation, the terms and conditions of the present license agreement shall take precedence over any communication or advertising material in the event that such material contradicts any of said terms and conditions or where such material predates this license agreement. The acceptance of the terms and conditions of this agreement does not confer any rights of ownership over the programs or products belonging to LITE-ON.  "</string>
    <string name="welcome_join_program">Join iCG User Experience Improvement Program</string>
    <string name="welcome_permission_term">Permission for school teacher to see your kid\'s sleeping information</string>
    <string name="welcome_accept">Accept</string>
    <string name="welcome_quit">Quit</string>
    <string name="welcome_confirm">Confirm</string>
    <!--  login Page -->
    <string name="login_teacher_account">Login your account</string>
    <string name="login_account_info">第一次登入，請使用學校給予的帳號及密碼登錄，日後請至選單“老師資料設定”內修改</string>
    <string name="login_account">Account</string>
    <string name="login_password">Password</string>
    <string name="login_forget_password">Forgot password?</string>
    <string name="login_login">Login</string>
    <string name="login_social_signin">Login with</string>
    <string name="login_ok">OK</string>
    <string name="login_google">Google</string>
    <string name="login_facebook">Facebook</string>
    <string name="login_error_email">Email address does not exist</string>
    <string name="login_no_network">Unable to connect to the internet</string>
    <string name="login_error_account_or_password">Invalid account (email) or password, please try again!</string>
    <string name="login_error_no_server_connection">Failed to connect to server. Please try again later!</string>
    <!-- Forget Password -->
    <string name="forget_reset_password">Reset your password</string>
    <string name="forget_input_original_account">Please provide the email address that you used when you signed up for your account. We will send you an email to reset your password.</string>
    <string name="forget_send">Submit</string>
    <string name="forget_back_to_login">Back to Login</string>
    <string name="forget_reset_done">Password reset confirmation</string>
    <string name="forget_account_not_exist">Email address does not exist</string>
    <string name="forget_check_mailbox_and_setup">Please check your email for continue the password reset process</string>
    <!-- bottom navigation view -->
    <string name="my_class">My Class</string>
    <string name="contact_matters">Contact Matters</string>
    <string name="search">Search</string>
    <!-- Drawer -->
    <string name="teacher_info">Teacher Information</string>
    <string name="app_info">App Information </string>
    <string name="logout">Log out</string>
    <string name="class_name">%s %s年%s班</string>
    <!-- Student Info -->
    <string name="safty_enter_school">Arrive School</string>
    <string name="safty_leave_school">Leave School</string>
    <string name="safty_no_watch_detected">No scanned data</string>
    <string name="icg_healthy">icg healthy</string>
    <string name="student_position">student position</string>
    <string name="report_absent">Report Student Info. Error</string>
    <!-- healthy -->
    <string name="healthy_today_reocrd">Health Summary</string>
    <string name="healthy_today_reocrd_not_update">Health Summary(Not Synced)</string>
    <string name="healthy_update_time">\'Updated\' MM/dd hh:mm</string>
    <string name="healthy_sync_failed">Data sync failed</string>
    <string name="healthy_sync">Sync</string>
    <string name="healthy_activity">PFI</string>
    <string name="healthy_steps">Steps</string>
    <string name="healthy_step">Steps</string>
    <string name="healthy_carlories">Calories Burned</string>
    <string name="healthy_cal">Kcal</string>
    <string name="healthy_walk">Walking</string>
    <string name="healthy_minutes">Mins</string>
    <string name="healthy_running">Running</string>
    <string name="healthy_cycling">Cycling</string>
    <string name="healthy_avg_bpm">Heart Rate</string>
    <string name="healthy_bpm">bpm</string>
    <string name="healthy_sleep">Sleep</string>
    <string name="healthy_wake">Wake</string>
    <string name="healthy_hour_mins">hh \'Hrs\' mm \'Mins\'</string>
    <!-- Activities -->
    <string name="activity">PFI</string>
    <string name="activity_very_bad">Poor</string>
    <string name="activity_bad">Not good</string>
    <string name="activity_normal">Average</string>
    <string name="activity_good">Good</string>
    <string name="activity_excellent">Excellent</string>
    <string name="activity_last_7_days">7 days</string>
    <string name="activity_today">Today</string>
    <string name="sleep_quality">Sleep Quality</string>
    <string name="sleep_quality_good">Good</string>
    <string name="sleep_quality_normal">Ok</string>
    <string name="sleep_quality_bad">bad</string>
    <string name="sleep_hours">Hours</string>
    <!-- Contact -->
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="delete_confirm">Delete</string>
    <string name="register_name">email</string>
    <string name="original_password">Original Password</string>
    <string name="register_password">如有更改密碼將重新登入，請記住新密碼</string>
    <string name="password_hint">如有更改密碼將重新登入，請記住新密碼</string>
    <string name="confirm_new_password">新密碼(至少八碼英文或數字)</string>
    <string name="confirm_new_password_again">再次確認新密碼</string>
    <string name="alarm_sync_complete">Synced</string>
    <string name="alarm_syncing">Syncing</string>
    <string name="origin_password_wrong">原密碼錯誤</string>
    <string name="new_password_wrong">密碼與確認密碼不相同</string>
    <string name="new_password_hint">密碼至少八碼英文或數字</string>
    <!-- Location -->
    <string name="unable_to_locate">無法定位</string>
</resources>
