<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="@string/forget_reset_password"
            android:textColor="@color/md_black_1000"
            android:textSize="@dimen/page_title_text_size" />

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/login_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginBottom="@dimen/page_title_margin_bottom"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:text="@string/forget_input_original_account"
        android:textColor="@color/md_black_1000" />

    <EditText
        android:id="@+id/login_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edit_text_height"
        android:layout_below="@id/login_desc"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/page_title_margin_bottom"
        android:hint="@string/login_account"
        android:maxLines="1"
        android:singleLine="true"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/login_edit_text_size"
        android:textColor="@color/md_black_1000"/>

    <LinearLayout
        android:id="@+id/login_btn_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/email_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_option_btn_margin_bottom"
            android:background="@drawable/btn_bg"
            android:textColor="@drawable/btn_text_color"
            android:text="@string/forget_send" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/back_to_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_option_btn_margin_bottom"
            android:background="@drawable/btn_bg"
            android:text="@string/forget_back_to_login"
            android:textColor="@drawable/btn_text_color" />

    </LinearLayout>
</RelativeLayout>
