<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize" >

        <ImageView
            android:id="@+id/cancel"
            android:layout_width="@dimen/toolbar_icon_size"
            android:layout_height="@dimen/toolbar_icon_size"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_navigate_before_white_24dp"
            app:backgroundTint="@color/md_white_1000" />

        <TextView
            android:id="@+id/page_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="@string/teacher_info"
            android:textColor="@color/md_white_1000"
            android:textSize="@dimen/page_title_text_size" />
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/page_title_margin_bottom"
        android:layout_below="@id/toolbar"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <EditText
            android:id="@+id/login_account"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edit_text_height"
            android:layout_marginBottom="@dimen/page_title_margin_bottom"
            android:hint="@string/login_account"
            android:maxLines="1"
            android:textColor="@color/md_grey_400"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/login_edit_text_size"
            android:editable="false"/>

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edit_text_height"
            android:layout_below="@id/login_account"
            android:hint="@string/original_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/md_black_1000"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/login_edit_text_size"
            android:maxLength="45"/>

        <EditText
            android:id="@+id/login_new_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edit_text_height"
            android:layout_below="@id/login_password"
            android:layout_marginTop="@dimen/page_title_margin_bottom"
            android:hint="@string/confirm_new_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/md_black_1000"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/login_edit_text_size"/>

        <EditText
            android:id="@+id/login_new_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edit_text_height"
            android:layout_below="@id/login_new_password"
            android:layout_marginTop="@dimen/page_title_margin_bottom"
            android:hint="@string/confirm_new_password_again"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/md_black_1000"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/login_edit_text_size"/>
        <TextView
            android:id="@+id/password_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_new_password_confirm"
            android:text="@string/password_hint"
            android:textColor="@color/md_red_A700"
            android:textSize="@dimen/password_hint_size" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/progressBarHolder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:animateLayoutChanges="true"
        android:background="@color/md_grey_800"
        android:visibility="gone" >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminate="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/progress_bar"
                android:text="更新資料至雲端中"
                android:textColor="@color/md_white_1000" />
        </RelativeLayout>

    </FrameLayout>

</RelativeLayout>